<resources>
    <string name="app_name" translatable="false">Antypayment Guard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_bank_account">Add bank account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="title_activity_sign_in_to_bank">SignIn To Bank</string>
    <string name="next">Next</string>
    <string name="remove">Remove</string>
    <string name="condition_transactions_number">Transactions number</string>
    <string name="condition_transactions_amount">Transactions amount</string>
    <string name="condition_value">Condition value</string>
    <string name="done">Done</string>
    <string name="balance">Balance</string>
    <string name="iban" translatable="false">IBAN</string>
    <string name="owner">Owner</string>
    <string name="sign_in_succes">Signed in successfully</string>
    <string name="logged">You are logged into this bank</string>
    <string name="add">Add</string>
    <string name="condition_can_not_be_empty">Condition can not be empty</string>
    <string name="back">Back</string>
    <string name="title_activity_bank_account_details">Bank Account Details</string>
    <string name="title_fragment_pay_card_details">Details</string>
    <string name="title_fragment_transactions_list">Transactions</string>
    <string name="bank" translatable="false">Bank</string>
    <string name="amount">Amount</string>
    <string name="transaction_date">Transaction date</string>
    <string name="condition_status">Condition status</string>
    <string name="condition_type">Condition type</string>
    <string name="condition_fulfilled">Condition fulfilled</string>
    <string name="remained">Remained</string>
    <string name="transactions">transactions</string>
    <string name="title_activity_bank_account_transaction">Transaction details</string>
    <string name="bank_account">Bank account</string>
    <string name="date">Date</string>
    <string name="party">Party</string>
    <string name="party_iban">Party IBAN</string>
    <string name="kind">Kind</string>
</resources>
