<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.antypaymentguard.activities.SignInToBank"
    tools:showIn="@layout/activity_sign_in_to_bank">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectBankSpinner"
        android:entries="@array/select_bank_options_list"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="88dp" />

    <android.support.design.widget.TextInputLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/loginTextLayout"
        android:layout_below="@+id/selectBankSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginText"
            android:inputType="text"
            android:hint="@string/login"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/passwordTextLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginTextLayout"
        android:layout_alignParentLeft="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordText"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_in"
        android:id="@+id/signInButton"
        android:layout_below="@+id/passwordTextLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

</RelativeLayout>
